feat(backend): swagger doc + format
